<resources>
    <string name="app_name">Trading Book</string>
    <string name="dangtai">Loading...</string>
    <string name="emailDangNhap">Email đăng nhập</string>
    <string name="emailDangKy">Email đăng ký</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="facebook_app_id">320798458471539</string>
    <string name="thongbaoloi">Bạn chưa nhập</string>
    <string name="dangky"><u>Đăng ký ngay</u></string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu bằng email</string>
    <string name="chitietkhoiphuc">Bạn vui lòng nhập email vào khung bên dưới để khôi phục mật khẩu</string>
    <string name="chuacotaikhoan">Bạn chưa có tài khoản? </string>
    <string name="guimail">Gửi</string>
    <string name="dangnhapGG">Đăng nhập với Google</string>
    <string name="dangnhapFB">Đăng nhập với Facebook</string>
    <string name="btndangky">đăng ký</string>
    <string name="taikhoankhongtontai">Tài khoản không tồn tại</string>
    <string name="thanhcong">Thành công</string>
    <string name="emailkhonghople">Email không hợp lệ. Bạn vui lòng nhập đúng định dạng email</string>
    <string name="dangxuly">Đang xử lý...</string>
    <string name="matkhaukhongkhop">Bạn vui lòng nhập mật khẩu giống ở trên</string>
    <string name="taotaikhoanthanhcong">Tạo tài khoản thành công!</string>
    <string name="timkiem">Tìm kiếm sách</string>
    <string name="caidat">Cài đặt</string>
    <string name="_1">1</string>
    <string name="more">More</string>
    <string name="huongdan">Hướng dẫn</string>
    <string name="tennguoidung">Tên người dùng</string>
    <string name="sdt">Số điện thoại</string>
    <string name="diachi">Địa chỉ</string>
    <string name="baocao">Báo cáo</string>
    <string name="lydo">Lý do</string>
    <string name="capnhat">Cập nhật</string>
    <string name="hintnhap">Nhập tại đây...</string>
</resources>
