<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baocao"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="93dp"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_black_18dp"
            android:background="@color/colorWhite"
            android:layout_marginStart="75dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btnClose"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lydo"
        android:textColor="@color/colorBlack"
        />
    <EditText
        android:inputType="text"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintnhap"
        android:id="@+id/txtReason"
        android:lines="2"
        android:maxLines="5"/>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="5dp"
        android:text="@string/baocao"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>