<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:id="@+id/relativelayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:src="@drawable/logo"
            android:id="@+id/imgAva"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnChoose"
            android:background="@drawable/ic_photo_camera_black_24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignTop="@id/btnChoose"
            android:layout_marginTop="50dp"
            android:id="@+id/layout1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/txtName"
                    android:layout_height="wrap_content"
                    android:hint="@string/tennguoidung"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_black_18dp"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:id="@+id/btnEditName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignTop="@id/layout1"
            android:layout_marginTop="50dp"
            android:id="@+id/layout2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtInputPhone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPhone"
                    android:hint="@string/sdt"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_black_18dp"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:id="@+id/btnEditPhone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignTop="@id/layout2"
            android:layout_marginTop="50dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/txtInputAddress"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAddress"
                    android:hint="@string/diachi"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_black_18dp"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:id="@+id/btnEditAddress"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relativelayout"
        android:layout_marginTop="25dp"
        android:text="@string/capnhat"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        />

    <Button
        android:id="@+id/btnTempUserInfo"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnUpdate"
        android:layout_marginTop="25dp"
        android:text="User Info"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        />

</RelativeLayout>